Refactor OpenMath IO and generic types; Move GML loaders to geography package